--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,25 @@ pool:
 
 variables:
   vmManagerImage: 'azure-vm-manager:$(build.buildId)'
+  repoName: neilswinton
 
 steps:
-- script: cd azure-vm-manager && docker build -f Dockerfile -t $(vmManagerImage) .
-  displayName: 'docker build'
+- task: Docker@1
+  inputs:
+    command: login
+    containerregistrytype: Container Registry
+    dockerRegistryEndpoint: "Dockerhub(neilswinton)"
+- task: Docker@1
+  displayName: Build image
+  inputs:
+    command: build
+    dockerFile: azure-vm-manager/Dockerfile
+    imageName: $(Build.Repository.Name)/azure-vm-manager
+- task: Docker@1
+  displayName: Tag image
+  inputs:
+    command: tag
+    imageName: $(repoName)/$(Build.Repository.Name):latest
+    arguments: $(repoName)/$(Build.Repository.Name):$(Build.BuildId)
+- script: docker image ls
+  displayName: 'docker image ls'
