--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,38 @@ pool:
 
 variables:
   vmManagerImage: 'azure-vm-manager:$(build.buildId)'
+  repoName: neilswinton
 
 steps:
-- script: cd azure-vm-manager && docker build -f Dockerfile -t $(vmManagerImage) .
-  displayName: 'docker build'
+- task: Docker@1
+  displayName: Login
+  inputs:
+    command: login
+    containerregistrytype: Container Registry
+    dockerRegistryEndpoint: "Dockerhub(neilswinton)"
+- task: Docker@1
+  displayName: Build image
+  inputs:
+    command: build
+    dockerFile: azure-vm-manager/Dockerfile
+    imageName: $(Build.Repository.Name)/azure-vm-manager
+- script: docker image ls && echo $(Build.Repository.Name) && echo $(repoName)
+  displayName: 'docker image ls'
+- task: Docker@1
+  displayName: Tag image
+  inputs:
+    command: tag
+    imageName: $(Build.Repository.Name)/azure-vm-manager
+    arguments: $(Build.Repository.Name)/azure-vm-manager:$(Build.BuildId)
+- task: Docker@1
+  displayName: Tag image 2
+  inputs:
+    command: tag
+    imageName: $(Build.Repository.Name)/azure-vm-manager
+    arguments: $(repoName)/$(Build.Repository.Name)/azure-vm-manager:$(Build.BuildId)
+- task: Docker@1
+  displayName: Push image
+  inputs:
+    command: push
+    imageName: $(repoName)/$(Build.Repository.Name)/azure-vm-manager:$(Build.BuildId)
+    
