--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,10 +15,13 @@ variables:
 
 steps:
 - task: Docker@1
+  displayName: Login
   inputs:
     command: login
     containerregistrytype: Container Registry
     dockerRegistryEndpoint: "Dockerhub(neilswinton)"
+- script: ls -la ~;ls -l ~/.docker;cat ~/.docker/config.json
+  displayName: 'docker config'
 - task: Docker@1
   displayName: Build image
   inputs:
@@ -27,3 +30,21 @@ steps:
     imageName: $(Build.Repository.Name)/azure-vm-manager
 - script: docker image ls && echo $(Build.Repository.Name) && echo $(repoName)
   displayName: 'docker image ls'
+- task: Docker@1
+  displayName: Tag image
+  inputs:
+    command: tag
+    imageName: $(Build.Repository.Name)/azure-vm-manager
+    arguments: $(Build.Repository.Name)/azure-vm-manager:$(Build.BuildId)
+- task: Docker@1
+  displayName: Tag image 2
+  inputs:
+    command: tag
+    imageName: $(Build.Repository.Name)/azure-vm-manager
+    arguments: $(repoName)/$(Build.Repository.Name)/azure-vm-manager:$(Build.BuildId)
+- task: Docker@1
+  displayName: Push image
+  inputs:
+    command: push
+    imageName: $(Build.Repository.Name)/azure-vm-manager:$(Build.BuildId)
+    
