--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
-- master
+- azure-pipelines
 
 pool:
   vmImage: 'Ubuntu-16.04'
@@ -20,12 +20,10 @@ steps:
     command: login
     containerregistrytype: Container Registry
     dockerRegistryEndpoint: "Dockerhub(neilswinton)"
-- script: ls -la ~;ls -l ~/.docker;cat ~/.docker/config.json
-  displayName: 'docker config'
 - task: Docker@1
   displayName: Build image
   inputs:
-    command: build
+    command: Build an image
     dockerFile: azure-vm-manager/Dockerfile
     imageName: $(Build.Repository.Name)/azure-vm-manager
 - script: docker image ls && echo $(Build.Repository.Name) && echo $(repoName)
@@ -33,18 +31,18 @@ steps:
 - task: Docker@1
   displayName: Tag image
   inputs:
-    command: tag
+    command: Tag image
     imageName: $(Build.Repository.Name)/azure-vm-manager
     arguments: $(Build.Repository.Name)/azure-vm-manager:$(Build.BuildId)
 - task: Docker@1
   displayName: Tag image 2
   inputs:
-    command: tag
+    command: Tag image
     imageName: $(Build.Repository.Name)/azure-vm-manager
     arguments: $(repoName)/$(Build.Repository.Name)/azure-vm-manager:$(Build.BuildId)
 - task: Docker@1
   displayName: Push image
   inputs:
-    command: push
+    command: Push an image
     imageName: $(Build.Repository.Name)/azure-vm-manager:$(Build.BuildId)
     
