Try removing the docker login step following stackoverflow

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,12 +14,12 @@ variables:
   repoName: neilswinton
 
 steps:
-- task: Docker@1
-  displayName: Login
-  inputs:
-    command: login
-    containerregistrytype: Container Registry
-    dockerRegistryEndpoint: "Dockerhub(neilswinton)"
+# - task: Docker@1
+#   displayName: Login
+#   inputs:
+#     command: login
+#     containerregistrytype: Container Registry
+#     dockerRegistryEndpoint: "Dockerhub(neilswinton)"
 - task: Docker@1
   displayName: Build image
   inputs:
